--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "dependencies": {
-    "axios": "^1.11.0",
-    "express": "^4.18.2"
-  }
+ "dependencies": {
+  "axios": "^1.11.0",
+  "express": "^4.18.2",
+  "cors": "^2.8.5"
+   }
 }
